# template-repository

./: .copilotignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  azure.yaml  pyproject.toml  template-repository.code-workspace
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: python-tooling.instructions.md  python.instructions.md  terraform.instructions.md  tests.instructions.md
.github/prompts/: new-api-endpoint.prompt.md
.github/workflows/: ci.yml  code-analysis.yml  deploy-application.yml  deploy-terraform.yml
.img/: architecture.drawio
docs/: configuration-reference.md  deployment.md  local-development.md
infra/: main.bicep  main.tf  main.tfvars.json  outputs.tf  provider.conf.json  providers.tf  variables.tf
infra/modules/monitoring/: main.tf  outputs.tf  providers.tf  variables.tf
src/template_repository/: app.py  config.py  main.py
tests/: test_app.py  test_config.py  test_main.py
