[project]
name = "template-repository"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "httpx",
  "ruff",
  "pre-commit",
]

[project.scripts]
template-repository = "template_repository.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/template_repository"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.coverage.xml]
output = "coverage.xml"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_repository"]
